# name-tags

./: .gitignore  README.md  pyproject.toml
src/name_tags/: __init__.py  generate_pdf.py
